--- a/examples/todomvc/resources/public/index.html
+++ b/examples/todomvc/resources/public/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" data-framework="refunc">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Refunc • TodoMVC</title>
     <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
     <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
-    <title>TodoMVC</title>
   </head>
   <body>
     <div id="app">
